--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "autoprefixer": "^10.2.5",
     "next": "10.0.9",
+    "postcss": "^8.2.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/react": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
